2007-05-31  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/frame.js: Add _updateContentSize, which
	increments _ignoreConfigureCount, and calls _content.onmoveresize. In the
	configure event handler, ignore the event if _ignoreConfigureCount
	> 0, and decrement it.  Call _updateContentSize at the end of show.

	* compzilla/chrome/content/minimize.js: Add a custom jQuery easing
	method that calls _focusedFrame._updateContentSize.  Set animate
	to true, and use the custom animation.  Call w._updateContentSize
	in the animation finished callback.

	* compzilla/chrome/content/content.js: Don't spew so much in
	onmoveresize.

2007-05-31  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/skin/compzilla.css: Hide side/bottom frame
	borders for maximized windows.

	* compzilla/chrome/content/start.xul: Add uiDlgBorderLeft/Right
	helper classes to border divs, to simplify the css rules.

2007-05-30  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/util.js: Use jQuery.extend here too.

2007-05-30  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/content/start.js: initialize our workarea.

	* compzilla/chrome/content/minimize.js: reuse this file to hold
	RestoreCompzillaFrame and MaximizeCompzillaFrame.

	* compzilla/chrome/content/start.xul: use the maximize button as a
	toggle.  Also set the initial window-state to normal.

	* compzilla/chrome/content/frame.js: implement state switching
	(maximize,minimize,fullscreen,normal) and restoring to normal from
	the others.  also, realy fix that typo in parameter names to
	clientMessageRecv.

	* compzilla/chrome/content/workarea.js: make this so it doesn't
	crash on startup.

2007-05-30  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaRenderingContext.cpp (Redraw): Fallback
	to 15.0 twips if nsPresContext::PixelsToTwips returns 0.  I have
	no idea why this happens, but it does.

2007-05-30  Alex Graveley  <alex@beatniksoftware.com>
