@@ -227,7 +227,7 @@
     <script type="application/x-javascript" src="chrome://compzilla/content/content.js" />
     <script type="application/x-javascript" src="chrome://compzilla/content/scale.js" />
     <script type="application/x-javascript" src="chrome://compzilla/content/overlay.js" />
-    <script type="application/x-javascript" src="chrome://compzilla/content/minimize.js" />
+    <script type="application/x-javascript" src="chrome://compzilla/content/minmax.js" />
     <script type="application/x-javascript" src="chrome://compzilla/content/start.js" />
 
 </window>
